--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -132,7 +132,7 @@ h3 {
     list-style: none;
 }
 
-.breadrrumbs__item {
+.breadcrumbs__item {
     font-size: 14px;
 
     &:not(:last-child) {
@@ -141,12 +141,18 @@ h3 {
 
         a {
             margin-right: 5px;
+            &:hover {
+                text-decoration: underline;
+            }
         }
 
         &::after {
             content: '/';
             display: block;
         }
+    }
+    .breadcrumbs__item-current {
+        font-weight: 600;
     }
 }
 
@@ -196,4 +202,8 @@ th {
 
 p {
     margin-bottom: 10px;
+}
+
+.select {
+    z-index: 1;
 }
